--- a/.github/workflows/gke-deployment.yml
+++ b/.github/workflows/gke-deployment.yml
@@ -70,6 +70,9 @@ jobs:
           gcloud config set compute/zone us-central1-a
           gcloud container clusters get-credentials multi-cluster
 
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        
       - name: Build and push Docker images
         run: |
           docker build -t ercankurtoglu/multi-client:latest -t ercankurtoglu/multi-client:$SHA -f ./client/Dockerfile ./client
