--- a/.github/workflows/gke-deployment.yml
+++ b/.github/workflows/gke-deployment.yml
@@ -69,10 +69,15 @@ jobs:
           gcloud config set project multi-k8s-445712
           gcloud config set compute/zone us-central1-a
           gcloud container clusters get-credentials multi-cluster
+          
+      - name: Install GKE Auth Plugin
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-        
+
       - name: Build and push Docker images
         run: |
           docker build -t ercankurtoglu/multi-client:latest -t ercankurtoglu/multi-client:$SHA -f ./client/Dockerfile ./client
