--- a/.github/workflows/gke-deployment.yml
+++ b/.github/workflows/gke-deployment.yml
@@ -64,16 +64,16 @@ jobs:
       - name: Authenticate to Google Cloud
         run: gcloud auth activate-service-account --key-file=service-account.json
 
-      - name: Configure Google Cloud
-        run: |
-          gcloud config set project multi-k8s-445712
-          gcloud config set compute/zone us-central1-a
-          gcloud container clusters get-credentials multi-cluster
-          
       - name: Install GKE Auth Plugin
         run: |
           sudo apt-get update
           sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+
+      - name: Configure Google Cloud
+        run: |
+          gcloud config set project multi-k8s-445712
+          gcloud config set compute/zone us-central1-a
+          gcloud container clusters get-credentials multi-cluster --zone us-central1-a --project multi-k8s-445712
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
