--- a/.github/workflows/gemini.yml
+++ b/.github/workflows/gemini.yml
@@ -4,12 +4,14 @@ on:
   push:
     branches: [ master ]
 
+env:
+  SHA: ${{ github.sha }}
+  CLOUDSDK_CORE_DISABLE_PROMPTS: 1
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    env:
-      SHA: ${{ github.sha }}
-      CLOUDSDK_CORE_DISABLE_PROMPTS: 1
+
     steps:
       - uses: actions/checkout@v3
 
@@ -20,7 +22,7 @@ jobs:
 
       # Configure gcloud path
       - name: Configure Google Cloud SDK path
-        run: echo "source $HOME/google-cloud-sdk/path.bash.inc" >> $GITHUB_ENV
+        run: echo "source $HOME/google-cloud-sdk/path.bash.inc"
 
       # Install kubectl and update
       - name: Install kubectl
