--- a/.github/workflows/gemini.yml
+++ b/.github/workflows/gemini.yml
@@ -24,6 +24,13 @@ jobs:
       - name: Configure Google Cloud SDK path
         run: echo "source $HOME/google-cloud-sdk/path.bash.inc"
 
+      # Install kubectl and update
+      - name: Install kubectl
+        run: |
+          gcloud components install kubectl
+          kubectl version --client
+
+      # Authenticate to Google Cloud
       - name: Decrypt service account key
         run: gpg --quiet --batch --yes --decrypt --passphrase="${{ secrets.PASSPHRASE }}" --output service-account.json service-account.json.gpg
 
@@ -70,6 +77,10 @@ jobs:
           docker push ercankurtoglu/multi-server:$SHA
           docker push ercankurtoglu/multi-worker:$SHA
 
+      # Install the gke-gcloud-auth-plugin binary
+      - name: Install the gke-gcloud-auth-plugin
+        run:  gcloud components install gke-gcloud-auth-plugin
+      
       # Apply Kubernetes configurations
       - name: Apply Kubernetes configurations
         run: kubectl apply -f k8s
