--- a/.github/workflows/gke-deployment.yml
+++ b/.github/workflows/gke-deployment.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
           gcloud config set project multi-k8s-445712
           gcloud config set compute/zone us-central1-a
-          gcloud container clusters get-credentials multi-cluster --zone us-central1-a --project multi-k8s-445712
+          gcloud container clusters get-credentials multi-cluster
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
@@ -72,7 +72,7 @@ jobs:
           docker push ercankurtoglu/multi-worker:$SHA
 
       - name: Apply Kubernetes Configs
-        run: kubectl apply -f k8s --validate=false
+        run: kubectl apply -f k8s
 
       - name: Update Kubernetes deployments
         run: |
