--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -5,10 +5,35 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/use-regex: 'true'
     nginx.ingress.kubernetes.io/rewrite-target: /$1
+    certmanager.io/cluster-issuer: 'letsencrypt-prod'
+    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
 spec:
+  tls:
+    - hosts:
+        - ercankurtoglu.xyz
+        - www.ercankurtoglu.xyz
+      secretName: ercankurtoglu-xyz
   ingressClassName: nginx
   rules:
-    - http:
+    - host: ercankurtoglu.xyz 
+      http:
+        paths:
+          - path: /?(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: client-cluster-ip-service
+                port:
+                  number: 3000
+          - path: /api/?(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: server-cluster-ip-service
+                port:
+                  number: 5000
+    - host: www.ercankurtoglu.xyz 
+      http:
         paths:
           - path: /?(.*)
             pathType: ImplementationSpecific
